force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <description>Workbook-defined member referral records.</description>
    <label>Member Referral</label>
    <nameField>
        <displayFormat>REF-{000000}</displayFormat>
        <label>Member Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Referrals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>