force-app/main/default/objects/Referral__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Referral fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>