force-app/main/default/objects/Referral__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral fields</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Referral fields Records</relationshipLabel>
    <relationshipName>ReferralLead</relationshipName>
    <type>Lookup</type>
</CustomField>