force-app/main/default/objects/Referral__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>