force-app/main/default/objects/Referral__c/fields/Reward_Status__c.field-meta.xml
<CustomField>
    <fullName>Reward_Status__c</fullName>
    <label>Referral fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Earned</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>